--- a/templates/includes/footer1.html
+++ b/templates/includes/footer1.html
@@ -1,5 +1,7 @@
 <footer class="bg-dark text-white text-center py-3 mt-5">
   <div class="container">
+    {% if site_setting.copyright %}
     <p class="mb-0">&copy; {{site_setting.copyright}}</p>
+    {%endif%}
   </div>
 </footer>
